--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -8,3 +8,6 @@ $couleur_tertiaire:#99E2D0;
 
 $police_texte:'Roboto', sans-serif;
 $police_titre_menu:'Shrikhand', cursive;
+
+$coeur-début: rgba(1, 28, 55, 0);
+$coeur-fin: rgba(1, 28, 55, 1);
