--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
-/*Variables*/
-/*Variables*/
 /*Mixins*/
+/*Variables*/
 /*Sélecteurs*/
 .boutton {
   width: 14em;
@@ -11,6 +10,7 @@
   background: linear-gradient(to right bottom, #FF79DA, #9356DC);
   color: white;
   box-shadow: 5px 5px 15px grey;
+  z-index: 1;
   font-family: "Roboto", sans-serif;
   font-weight: light 300;
   font-size: 2.5em;
@@ -139,22 +139,23 @@
 }
 
 .titre_bulle_menu {
-  font-size: 3em;
-  margin-top: 0.5em;
+  font-size: 3.5em;
+  margin-top: 0em;
 }
 
 .texte_bulle_menu {
-  font-size: 2.5em;
+  font-size: 3em;
   font-weight: lighter;
   margin-top: 0em;
 }
 
 .prix {
-  font-size: 2.5em;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 3em;
   display: flex;
   justify-content: flex-end;
   padding-right: 1.5em;
-  padding-bottom: 0.5em;
 }
 
 .prix:nth-child(3) {
@@ -264,7 +265,7 @@ h1 {
 figcaption {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
-  font-size: 2.5em;
+  font-size: 3em;
 }
 
 .bulle_chiffre:nth-child(1) {
@@ -299,7 +300,7 @@ figcaption {
   justify-content: flex-end;
   margin-top: -90px;
   opacity: 1;
-  animation: slide_coeur 0.5s;
+  animation: slide_coeur 0.8s;
 }
 
 .coeur:nth-child(1) {
@@ -311,7 +312,7 @@ figcaption {
 }
 
 @keyframes slide_coeur {
-  15% {
+  5% {
     background: linear-gradient(to top, #FF79DA 30%, #9356DC 10%, white 30%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -327,15 +328,15 @@ figcaption {
     -webkit-text-fill-color: transparent;
     opacity: 0.5;
   }
-  45% {
+  50% {
     background: linear-gradient(to top, #FF79DA 80%, white 30%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    opacity: 0.5;
+    opacity: 0.7;
   }
-  70% {
+  60% {
     background: linear-gradient(to right top, #FF79DA 0%, #9356DC 100%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -403,7 +404,7 @@ figcaption {
 
 #section_restaurants {
   margin-top: 15em;
-  height: 270em;
+  height: 290em;
   width: 98em;
 }
 
@@ -482,14 +483,20 @@ a {
 
 /*SPINNER LOADING*/
 .box_spinner {
-  animation: spinner-appear 2s 0.2s;
+  animation: background-appear 2s 0.2s;
   opacity: 0;
+  position: absolute;
+  top: 0em;
+  height: 100%;
+  width: 100%;
+  background-color: #f6f6f6;
+  z-index: -2;
 }
 .box_spinner .spinner_1::before {
   content: "";
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 42%;
   width: 200px;
   height: 200px;
   margin-top: -30px;
@@ -501,23 +508,38 @@ a {
   animation: spinner 0.7s ease infinite;
   background-color: #f6f6f6;
 }
+.box_spinner::before {
+  content: "";
+  opacity: 1;
+  position: absolute;
+  top: 0em;
+  height: 100%;
+  width: 100%;
+}
 
 @keyframes spinner {
   to {
     transform: rotate(360deg);
   }
 }
-@keyframes spinner-appear {
+@keyframes background-appear {
   0% {
     opacity: 1;
     z-index: 1;
   }
-  94% {
+  40% {
+    opacity: 0.95;
+  }
+  60% {
+    opacity: 0.9;
+    z-index: 1;
+  }
+  80% {
     opacity: 0.8;
     z-index: 1;
   }
   98% {
-    opacity: 0.4;
+    opacity: 0.7;
     z-index: 1;
   }
   100% {
@@ -586,7 +608,6 @@ a {
   height: 14em;
   margin-bottom: 1em;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 .bulles_menu .icon_validation {
   opacity: 0;
@@ -640,7 +661,7 @@ a {
   }
 }
 /*desktop*/
-@media screen and (min-width: 1024px) and (max-width: 1700px) {
+@media screen and (min-width: 1025px) and (max-width: 1700px) {
   #contenaire_bulles {
     display: flex;
     justify-content: space-around;
@@ -764,6 +785,17 @@ a {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .coeur::before {
+    font-size: 0.8em;
+    position: relative;
+    top: 0.5em;
+  }
+
+  .coeur_plein::before {
+    font-size: 0.8em;
+    margin-top: 0.5em;
+  }
 }
 /*Ultra-width*/
 @media screen and (min-width: 2000px) and (max-width: 2810px) {
@@ -847,13 +879,19 @@ a {
   #image_menu_un {
     width: 100%;
   }
-}
-@media screen and (min-width: 2810px) {
-  body {
-    margin-left: 50em;
-    margin-right: 50em;
+
+  .coeur::before {
+    font-size: 0.8em;
+    position: relative;
+    top: 0.8em;
   }
 
+  .coeur_plein::before {
+    font-size: 0.8em;
+    margin-top: 0.8em;
+  }
+}
+@media screen and (min-width: 2810px) {
   header {
     width: 100%;
   }
@@ -866,13 +904,9 @@ a {
     width: 100%;
   }
 
-  #contenaire_bulles {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .bulle {
-    width: 35em;
+  body {
+    margin-left: 20em;
+    margin-right: 20em;
   }
 
   #section_fonctionnement {
@@ -887,32 +921,52 @@ a {
     width: 100%;
   }
 
+  #contenaire_bulles {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .bulle_chiffre {
+    width: 3em;
+    height: 3em;
+  }
+
+  .bulle {
+    width: 60em;
+    height: 15em;
+  }
+
   .restaurants_articles {
-    width: 80em;
+    width: 100%;
     margin-right: 0em;
   }
 
   .images_figures {
-    width: 72em;
+    width: 95%;
   }
 
   .etiquette {
     position: relative;
-    right: 3em;
+    right: 5em;
   }
 
   .contenaire_article {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 10px;
   }
 
   #section_restaurants {
     height: 150em;
   }
 
+  .coeur_box {
+    position: relative;
+    top: 1.5em;
+  }
+
   footer {
-    width: 96.7%;
+    width: 97.4%;
   }
 
   .les_menus {
@@ -921,8 +975,19 @@ a {
     justify-content: center;
   }
 
+  .coeur::before {
+    font-size: 0.8em;
+    position: relative;
+    top: 0.5em;
+  }
+
+  .coeur_plein::before {
+    font-size: 0.8em;
+    margin-top: 0.5em;
+  }
+
   #image_menu_un, #image_menu_deux, #image_menu_trois, #image_menu_quatre {
-    width: 100%;
+    width: 70%;
   }
 }
 
