--- a/sass/Components/_selecteurs.scss
+++ b/sass/Components/_selecteurs.scss
@@ -1,67 +1,3 @@
-/*Variables*/
-$fond_header_ville:#EAEAEA;
-$fond_gris:#F6F6F6;
-
-$couleur_primaire:#9356DC;
-$couleur_secondaire:#FF79DA;
-$couleur_tertiaire:#99E2D0;
-
-$police_texte:'Roboto', sans-serif;
-$police_titre_menu:'Shrikhand', cursive;
-
-$coeur-début: rgba(1, 28, 55, 0);
-$coeur-fin: rgba(1, 28, 55, 1);
-/*Mixins*/
-@mixin typo-titres($taille){
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: $taille;
-    }
-
-@mixin typo-figure($weight){
-    font-family: 'Roboto', sans-serif;
-    font-weight: $weight;
-    font-size: 1.4em;
-}
-@mixin typo-footer ($taille){
-    font-family: 'Roboto', sans-serif;
-    font-weight: light 300;
-    font-size: $taille;
-}
-@mixin background-image($url){
-    height:50em;
-    width: 97em;
-    background-image: url($url);
-    background-size: cover;
-}
-@mixin coeur{
-    background: linear-gradient(to right top, $couleur_secondaire 0%,$couleur_primaire 100%);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color:transparent;
-}
-@mixin coeur_debut{
-    background: linear-gradient(to top, $couleur_secondaire 30%, $couleur_primaire 10%, white 30%);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color:transparent;
-}
-@mixin coeur_milieu {
-    background: linear-gradient(to top, $couleur_secondaire 60%,white 30%);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color:transparent;
-}
-@mixin coeur_trois_quart {
-    background: linear-gradient(to top, $couleur_secondaire 80%,white 30%);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color:transparent;
-}
 /*Sélecteurs*/
 .boutton{
     width:14em;
@@ -71,6 +7,7 @@ $coeur-fin: rgba(1, 28, 55, 1);
     background: linear-gradient(to right bottom, $couleur_secondaire, $couleur_primaire);
     color: white;
     box-shadow: 5px 5px 15px grey;
+    z-index: 1;
     @include typo-footer(2.5em);
     cursor: pointer;
     transition: transform 400ms;
@@ -181,20 +118,20 @@ $coeur-fin: rgba(1, 28, 55, 1);
     width:100%;
 }
 .titre_bulle_menu{
-    font-size: 3em;
-    margin-top: 0.5em;
+    font-size: 3.5em;
+    margin-top: 0em;
 }
 .texte_bulle_menu{
-    font-size: 2.5em;
+    font-size: 3em;
     font-weight: lighter;
     margin-top: 0em;
 }
 .prix{
-    font-size: 2.5em;
+    @include typo-titres(3em);
     display: flex;
     justify-content: flex-end;
     padding-right: 1.5em;
-    padding-bottom: 0.5em;
+    
 }
 .prix:nth-child(3){
     margin-top:-70px;
