--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
+@import "./Utils/mixins.scss";
 @import "./utils/variables";
-@import "./utils/mixins";
 @import "./Components/selecteurs";
+
 
 
     h1, h2{
@@ -78,7 +79,7 @@
         flex-direction: column;
     }
     figcaption{
-        @include typo-titres (2.5em);
+        @include typo-titres (3em);
     }
     .bulle_chiffre:nth-child(1){
         margin-left: -50px;
@@ -108,7 +109,7 @@
                 justify-content: flex-end;
                 margin-top: -90px;
                 opacity: 1;
-                animation: slide_coeur 0.5s;
+                animation: slide_coeur 0.8s;
             }
         }
     }
@@ -121,7 +122,7 @@
     }
 
     @keyframes slide_coeur {
-            15%{
+            5%{
             @include coeur_debut;
             opacity: 0.5;
             }
@@ -129,11 +130,11 @@
             @include coeur_milieu;
             opacity: 0.5;
             }
-            45%{
+            50%{
             @include coeur_trois_quart;
-            opacity: 0.5;
+            opacity: 0.7;
             }
-            70%{
+            60%{
             @include coeur;
             }
       }
@@ -190,7 +191,7 @@
     }
     #section_restaurants{
         margin-top: 15em;
-        height:270em;
+        height:290em;
         width:98em;
     }
     /*Footer*/
@@ -246,14 +247,21 @@
         color: black;
     }
    /*SPINNER LOADING*/
+   
    .box_spinner{
-    animation: spinner-appear 2s .2s;
+    animation: background-appear 2s .2s;
     opacity: 0;
+    position: absolute;
+    top:0em;
+    height: 100%;
+    width: 100%;
+    background-color:#f6f6f6;
+    z-index: -2;
     .spinner_1{
         &::before{
             content:"";
             position:absolute;
-            top:50%; left:50%;
+            top:50%; left:42%;
             width:200px;
             height:200px;
             margin-top:-30px;
@@ -266,6 +274,14 @@
             background-color: #f6f6f6;
         }
     }
+    &::before{
+        content: "";
+        opacity:1;
+        position: absolute;
+        top:0em;
+        height: 100%;
+        width: 100%;
+        }
 }
 
  
@@ -275,17 +291,24 @@
        }
    }
   
-    @keyframes spinner-appear {
+    @keyframes background-appear {
         0%{
         opacity: 1;
         z-index: 1;
         }
-        94%{
+        40%{
+        opacity: 0.95;
+        }
+        60%{
+        opacity: 0.9;
+        z-index: 1;
+        }
+        80%{
         opacity: 0.8;
         z-index: 1;
         }
         98%{
-        opacity: 0.4;
+        opacity: 0.7;
         z-index: 1;
         }
         100%{
@@ -361,7 +384,6 @@
             height: 14em;
             margin-bottom: 1em;
             overflow: hidden;
-            text-overflow: ellipsis;
                 .icon_validation{
                     opacity: 0;
                 }
@@ -375,7 +397,7 @@
                         justify-content: center;
                         align-items: center;
                         position: relative;
-                        bottom:15.5em; left:74em;
+                        bottom:15.5em; left:74em; 
                         animation: slide 1s;
                 }
                     .icon_validation{
@@ -391,6 +413,7 @@
                     }
                     .prix{
                         transform: translateX(-250px);
+                        
                     }
             }
         }
@@ -416,7 +439,7 @@
     }
 }
 /*desktop*/
-@media screen and (min-width : 1024px) and (max-width : 1700px){
+@media screen and (min-width : 1025px) and (max-width : 1700px){
     #contenaire_bulles{
         display: flex;
         justify-content: space-around;
@@ -450,6 +473,7 @@
         position: relative;
         top:1.5em;
     }
+    
 }
 @media screen and (min-width : 1700px) and (max-width : 1999px){
     header{
@@ -515,6 +539,15 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+    }
+    .coeur::before{
+        font-size: 0.8em;
+        position: relative;
+        top:0.5em;
+    }
+    .coeur_plein::before{
+        font-size: 0.8em;
+        margin-top: 0.5em;
     }
 }
 /*Ultra-width*/
@@ -583,15 +616,21 @@
     #image_menu_un{
         width: 100%;
     }
-
+    .coeur::before{
+        font-size: 0.8em;
+        position: relative;
+        top:0.8em;
+    }
+    .coeur_plein::before{
+        font-size: 0.8em;
+        margin-top: 0.8em;
+    }
+   
     }
     @media screen and (min-width : 2810px){
-        body{
-            margin-left: 50em;
-            margin-right: 50em;
-        }
         header{
             width:100%;
+            
         }
         main{
             width:100%;
@@ -599,12 +638,9 @@
         h2{
             width:100%;
         }
-        #contenaire_bulles{
-            display: flex;
-            justify-content: space-around;
-        }
-        .bulle{
-            width:35em;
+        body{
+            margin-left: 20em;
+            margin-right: 20em;
         }
         #section_fonctionnement{
             width:100%;
@@ -615,35 +651,62 @@
         #contenaire_bulles{
             width: 100%;
         }
+        #contenaire_bulles{
+            display: flex;
+            justify-content: space-around;
+        }
+        .bulle_chiffre{
+            width: 3em;
+            height: 3em;
+        }
+        .bulle{
+            width:60em;
+            height: 15em;
+        }
         .restaurants_articles{
-            width: 80em;
+            width: 100%;
             margin-right: 0em;
       }
         .images_figures{
-            width: 72em;
+            width: 95%;
         }
         .etiquette{
             position: relative;
-            right:3em;
+            right:5em;
         }
         .contenaire_article{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-column-gap: 10px;
+            
         }
         #section_restaurants{
             height: 150em;
         }
+        .coeur_box{
+            position: relative;
+            top:1.5em;
+        }
         footer{
-            width:96.7%;
+            width:97.4%;
         }
         .les_menus{
-           
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+         
         }
-        #image_menu_un, #image_menu_deux, #image_menu_trois, #image_menu_quatre{
-            width: 100%;
+        .coeur::before{
+            font-size: 0.8em;
+            position: relative;
+            top:0.5em;
+        }
+        .coeur_plein::before{
+            font-size: 0.8em;
+            margin-top: 0.5em;
+        }
+        #image_menu_un, #image_menu_deux,#image_menu_trois, #image_menu_quatre {
+            width:70%;
         }
     }
+    
