--- a/public/css/style.css
+++ b/public/css/style.css
@@ -662,17 +662,19 @@ a {
 }
 /*desktop*/
 @media screen and (min-width: 1025px) and (max-width: 1700px) {
+  .bulle {
+    width: 70em;
+  }
+
   #contenaire_bulles {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
 
   .bulle_chiffre {
     width: 3em;
-  }
-
-  .bulle {
-    width: 27em;
+    height: 3em;
   }
 
   .restaurants_articles {
