--- a/sass/main.scss
+++ b/sass/main.scss
@@ -226,16 +226,16 @@
     }
     
     #image_menu_un{
-        @include background-image("/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg")
+        @include background-image("/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
     }
     #image_menu_deux{
-        @include background-image("/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg")
+        @include background-image("/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
     }
     #image_menu_trois{
-        @include background-image("/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg")
+        @include background-image("GuillaumeDeBackre_3_02082021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
     }
     #image_menu_quatre{
-        @include background-image("/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg")
+        @include background-image("/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
     }
     .icons_menu{
         font-size: 3em;
@@ -427,6 +427,9 @@
           }
 
 /*media queries*/
+@media screen and (max-width : 767px){
+
+}
 @media screen and (min-width : 768px) and (max-width : 1024px){
     .bulle{
         width:60em;
