Image de fond menus
Problème résolu

--- a/sass/Components/_selecteurs.scss
+++ b/sass/Components/_selecteurs.scss
@@ -25,6 +25,9 @@
     &--flexstart{
         justify-content: flex-start;
     }
+    &--center{
+        justify-items: center;
+    }
 }
 .position-flex-start{
     display: flex;
