--- a/sass/main.scss
+++ b/sass/main.scss
@@ -224,18 +224,16 @@
         padding-right: 4em;
         border-radius: 70px 70px 0px 0px;
     }
-    
-    #image_menu_un{
-        @include background-image("/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+
+    .image_fond_menus{
+        height:50em;
+        width: 97em;
+        object-fit: cover;
     }
-    #image_menu_deux{
-        @include background-image("/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-    }
-    #image_menu_trois{
-        @include background-image("GuillaumeDeBackre_3_02082021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-    }
-    #image_menu_quatre{
-        @include background-image("/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+    .image_menu{
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
     .icons_menu{
         font-size: 3em;
