--- a/public/css/style.css
+++ b/public/css/style.css
@@ -442,32 +442,16 @@ footer ul li a {
   border-radius: 70px 70px 0px 0px;
 }
 
-#image_menu_un {
+.image_fond_menus {
   height: 50em;
   width: 97em;
-  background-image: url("/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-  background-size: cover;
+  object-fit: cover;
 }
 
-#image_menu_deux {
-  height: 50em;
-  width: 97em;
-  background-image: url("/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-  background-size: cover;
-}
-
-#image_menu_trois {
-  height: 50em;
-  width: 97em;
-  background-image: url("/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-  background-size: cover;
-}
-
-#image_menu_quatre {
-  height: 50em;
-  width: 97em;
-  background-image: url("/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
-  background-size: cover;
+.image_menu {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .icons_menu {
