--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,7 @@
   align-items: center;
   margin-bottom: 3em;
   box-shadow: 5px 5px 30px #b8b7b7;
+  width: 70%;
 }
 .bulle:hover {
   background-color: rgba(147, 86, 220, 0.15);
@@ -66,13 +67,19 @@
   opacity: 100%;
 }
 
+.div_bulle {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .fond_gris {
   background-color: #F6F6F6;
 }
 
 /*figure acceuil les restaurants*/
 .images_figures {
-  width: 88em;
+  width: 100%;
   height: 40em;
   border-radius: 40px 40px 0px 0px;
   object-fit: cover;
@@ -190,14 +197,8 @@ p {
   font-size: 3em;
 }
 
-/*Adaptation des éléments*/
-header {
-  width: 98em;
-}
-
 #section_fonctionnement {
   margin: 3em;
-  width: 93em;
 }
 
 #logo {
@@ -247,6 +248,9 @@ h1 {
   width: 90%;
   text-align: center;
   margin: 0em;
+  color: grey;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 #exploration {
@@ -277,7 +281,7 @@ figcaption {
 
 /*Figure*/
 .figcaption_restaurants {
-  width: 93%;
+  width: 100%;
   border-radius: 0px 0px 40px 40px;
   background-color: white;
   padding-left: 1em;
@@ -383,39 +387,24 @@ figcaption {
   font-weight: 0;
 }
 
-.etiquette:nth-child(1) {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  font-size: 2.5em;
-  background-color: #99E2D0;
-  filter: brightness(115%);
-  border-radius: 10px;
-  width: 6em;
-  height: 2em;
-  text-align: center;
-  padding-top: 25px;
-  color: green;
-  margin-left: 20em;
-  margin-bottom: -4.3em;
-  z-index: 1;
-}
-
 #titre_restaurants {
   margin-left: 0.7em;
   padding-top: 1.3em;
+  width: 95%;
 }
 
 #section_restaurants {
   margin-top: 15em;
-  height: 290em;
-  width: 98em;
+  margin-left: 1em;
 }
 
 /*Footer*/
 footer {
   background-color: #353535;
+  /*
   height: 12em;
   width: 36em;
+  */
   padding-left: 3em;
   padding-top: 1em;
   font-size: 2.5em;
@@ -435,8 +424,10 @@ footer ul li a {
 }
 
 #le_menu {
-  width: 89em;
+  /*
+  width:89em;
   height: 210em;
+  */
   background-color: #F6F6F6;
   padding-top: 1em;
   margin-top: -50px;
@@ -446,8 +437,10 @@ footer ul li a {
 }
 
 .image_fond_menus {
-  height: 50em;
+  /*
+  height:50em;
   width: 97em;
+  */
   object-fit: cover;
 }
 
@@ -483,7 +476,7 @@ a {
   content: "";
   position: absolute;
   top: 50%;
-  left: 42%;
+  left: 50%;
   width: 200px;
   height: 200px;
   margin-top: -30px;
@@ -635,28 +628,40 @@ a {
     transform: translateX(0);
   }
 }
-/*media queries*/
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .bulle {
-    width: 60em;
-  }
-
-  #contenaire_bulles {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+#contenaire_bulles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
+.etiquette {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 2.5em;
+  background-color: #99E2D0;
+  filter: brightness(115%);
+  border-radius: 10px;
+  width: 6em;
+  height: 2em;
+  text-align: center;
+  color: green;
+  z-index: 2;
+  position: absolute;
+  top: 2em;
+  left: 75%;
+  padding-top: 0.5em;
+}
+
+.restaurants_articles {
+  width: 100%;
+  position: relative;
+}
+
+/*media queries*/
 /*desktop*/
 @media screen and (min-width: 1025px) and (max-width: 1700px) {
   .bulle {
     width: 70em;
-  }
-
-  #contenaire_bulles {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
   }
 
   .bulle_chiffre {
@@ -664,28 +669,10 @@ a {
     height: 3em;
   }
 
-  .restaurants_articles {
-    width: 47em;
-    margin-right: 0em;
-  }
-
-  .images_figures {
-    width: 41em;
-  }
-
-  .etiquette {
-    position: relative;
-    right: 5em;
-  }
-
   .contenaire_article {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  #section_restaurants {
-    height: 150em;
   }
 
   .coeur_box {
@@ -706,11 +693,6 @@ a {
     width: 100%;
   }
 
-  body {
-    margin-left: 6em;
-    margin-right: 6em;
-  }
-
   #section_fonctionnement {
     width: 100%;
   }
@@ -728,36 +710,10 @@ a {
     justify-content: space-around;
   }
 
-  .bulle_chiffre {
-    width: 3em;
-  }
-
-  .bulle {
-    width: 27em;
-  }
-
-  .restaurants_articles {
-    width: 47em;
-    margin-right: 0em;
-  }
-
-  .images_figures {
-    width: 41em;
-  }
-
-  .etiquette {
-    position: relative;
-    right: 5em;
-  }
-
   .contenaire_article {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  #section_restaurants {
-    height: 150em;
   }
 
   .coeur_box {
@@ -812,47 +768,15 @@ a {
     width: 100%;
   }
 
-  body {
-    margin-right: 10em;
-    margin-left: 10em;
-  }
-
   #contenaire_bulles {
     display: flex;
     justify-content: space-around;
-  }
-
-  .bulle_chiffre {
-    width: 4em;
-    height: 3em;
-  }
-
-  .bulle {
-    width: 35em;
-  }
-
-  .restaurants_articles {
-    width: 52em;
-    margin-right: 0em;
-  }
-
-  .images_figures {
-    width: 46em;
-  }
-
-  .etiquette {
-    position: relative;
-    right: 3em;
   }
 
   .contenaire_article {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  #section_restaurants {
-    height: 150em;
   }
 
   footer {
@@ -893,11 +817,6 @@ a {
     width: 100%;
   }
 
-  body {
-    margin-left: 20em;
-    margin-right: 20em;
-  }
-
   #section_fonctionnement {
     width: 100%;
   }
@@ -915,38 +834,15 @@ a {
     justify-content: space-around;
   }
 
-  .bulle_chiffre {
-    width: 3em;
-    height: 3em;
-  }
-
-  .bulle {
-    width: 60em;
-    height: 15em;
-  }
-
   .restaurants_articles {
     width: 100%;
     margin-right: 0em;
-  }
-
-  .images_figures {
-    width: 95%;
-  }
-
-  .etiquette {
-    position: relative;
-    right: 5em;
   }
 
   .contenaire_article {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-column-gap: 10px;
-  }
-
-  #section_restaurants {
-    height: 150em;
   }
 
   .coeur_box {
