--- a/sass/Components/_selecteurs.scss
+++ b/sass/Components/_selecteurs.scss
@@ -49,6 +49,7 @@
     align-items: center;
     margin-bottom: 3em;
     box-shadow: 5px 5px 30px rgb(184, 183, 183);
+    width: 70%;
     &:hover{
         background-color: rgba(147, 86, 220, 0.15);
         .icons{
@@ -57,13 +58,18 @@
         }
     }
 }
+.div_bulle{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .fond_gris{
     background-color: $fond_gris;
 }
 
 /*figure acceuil les restaurants*/
 .images_figures{
-    width:88em;
+    width:100%;
     height: 40em;
     border-radius: 40px 40px 0px 0px;
     object-fit: cover;
