Positionnement du coeur

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -163,6 +163,7 @@
             }
         }
     }
+    /*
     .coeur_menu:nth-child(2){
         font-size: 5em;
         display: flex;
@@ -170,7 +171,7 @@
         margin-top: -70px;
         font-weight: 0;
     }
-
+*/
     #titre_restaurants{
         margin-left: 0.7em;
         padding-top: 1.3em;
