--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,10 +102,11 @@
             .coeur_plein{
                 @include coeur;
                 font-weight: 900;
-                font-size: 2.3em;
+                font-size: 2.5em;
                 display: flex;
                 justify-content: flex-end;
-                margin-top: -90px;
+                margin-top: -180px;
+                margin-right: 0.05em;
                 opacity: 1;
                 animation: slide_coeur 0.8s;
             }
@@ -141,6 +142,11 @@
         height: 0em;
         .coeur_plein_menu{
             opacity: 0;
+        }
+        .coeur_menu{
+                font-size: 1.5em;
+                display: flex;
+                justify-content: flex-end;
         }
         &:hover{
             .coeur_menu{
