--- a/sass/main.scss
+++ b/sass/main.scss
@@ -729,11 +729,11 @@ h3{
             position: relative;
             top:0.5em;
         }*/
-     
+     /*
         .coeur_plein::before{
             font-size: 0.8em;
             margin-top: 0.5em;
-        }
+        }*/
         #image_menu_un, #image_menu_deux,#image_menu_trois, #image_menu_quatre {
             width:70%;
         }
