--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,17 +99,19 @@
                 opacity: 0;
                 transition: .5s 0s ease;
             }
+            
             .coeur_plein{
                 @include coeur;
                 font-weight: 900;
                 font-size: 2.5em;
                 display: flex;
                 justify-content: flex-end;
-                margin-top: -180px;
-                margin-right: 0.05em;
+                margin-top: -120px;
+               margin-left: 0.05em;
                 opacity: 1;
                 animation: slide_coeur 0.8s;
             }
+            
         }
     }
     .coeur:nth-child(1){
@@ -469,7 +471,7 @@ h3{
     width: 100%;
 }
 /*media queries*/
-@media screen and (min-width : 0px) and (max-width : 497px){
+@media screen and (max-width : 497px){
     .box_menu{
         display: flex;
         justify-content: center;
@@ -488,6 +490,31 @@ h3{
             
         }
     }
+   /*Coeur avec animation*/
+   .coeur_box{
+    .coeur_plein{
+        opacity: 0;
+    }
+    &:hover{
+        .coeur{
+            opacity: 0;
+            transition: .5s 0s ease;
+        }
+        
+        .coeur_plein{
+            @include coeur;
+            font-weight: 900;
+            font-size: 2.5em;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: -120px;
+           margin-left: 0.05em;
+            opacity: 1;
+            animation: slide_coeur 0.8s;
+        }
+        
+    }
+}
 }
 @media screen and (min-width : 497px) and (max-width : 1200px){
     #le_menu{ 
@@ -523,6 +550,31 @@ h3{
             }
         }
 }}
+  /*Coeur avec animation*/
+  .coeur_box{
+    .coeur_plein{
+        opacity: 0;
+    }
+    &:hover{
+        .coeur{
+            opacity: 0;
+            transition: .5s 0s ease;
+        }
+        
+        .coeur_plein{
+            @include coeur;
+            font-weight: 900;
+            font-size: 2.5em;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: -180px;
+           margin-right: 0.05em;
+            opacity: 1;
+            animation: slide_coeur 0.8s;
+        }
+        
+    }
+}
 @media screen and (min-width : 1601px) and (max-width : 2000px){
     .box_menu{
         display: flex;
@@ -548,6 +600,31 @@ h3{
             }
         }
 }}
+  /*Coeur avec animation*/
+  .coeur_box{
+    .coeur_plein{
+        opacity: 0;
+    }
+    &:hover{
+        .coeur{
+            opacity: 0;
+            transition: .5s 0s ease;
+        }
+        
+        .coeur_plein{
+            @include coeur;
+            font-weight: 900;
+            font-size: 2.5em;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: -120px;
+            
+            opacity: 1;
+            animation: slide_coeur 0.8s;
+        }
+        
+    }
+}
 @media screen and (min-width : 2000px){
     .box_menu{
         display: flex;
