--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,14 +221,14 @@
     }
 
     .image_fond_menus{
-        height:40em;
+        height:20em;
         width: 100%;
         object-fit: cover;
         z-index: -1;
     }
     .image_menu{
         width: 100%;
-        height: 33em;
+        height: 20em;
         display: flex;
         justify-content: center;
     }
@@ -382,6 +382,7 @@
             padding-bottom: 1em;
             margin-bottom: 1em;
             overflow: hidden;
+            position: relative;
                 .icon_validation{
                     opacity: 0;
                 }
@@ -389,14 +390,16 @@
                 .validation{ 
                         border-radius: 0px 25px 25px 0px;
                         background-color: $couleur_tertiaire;
-                        width: 5em;
+                        width: 3em;
                         height: 5em;
+                        padding: 0 13px;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        position: relative;
-                        bottom:2.5em; left:80%; 
+                        position: absolute;
+                        bottom:0em; right: 0; 
                         animation: slide 1s;
+                        
                 }
                     .icon_validation{
                         opacity: 1;
@@ -410,25 +413,39 @@
                         transition: transform 500ms ease-in-out;
                     }
                     .prix{
-                        transform: translateX(-100px);
-                       
+                        width: 20%;
+                        transform: translateX(-60px);
                         white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;
+                       
                         
                     }
             }
         }
 
+        .plat_et_prix{
+            
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .plat{
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
         @keyframes slide {
             from {
-              transform: translateX(8rem);
+              transform: translateX(1rem);
             }
             to {
               transform: translateX(0);
             }
           }
-          
+        
 #contenaire_bulles{
         display: flex;
         flex-wrap: wrap;
