Les menus en responsive

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,14 +221,14 @@
     }
 
     .image_fond_menus{
-        height:20em;
+        height:15em;
         width: 100%;
         object-fit: cover;
         z-index: -1;
     }
     .image_menu{
         width: 100%;
-        height: 20em;
+        height: 15em;
         display: flex;
         justify-content: center;
     }
@@ -397,7 +397,7 @@
                         justify-content: center;
                         align-items: center;
                         position: absolute;
-                        bottom:0em; right: 0; 
+                        bottom:0; right: 0; 
                         animation: slide 1s;
                         
                 }
@@ -594,25 +594,9 @@ h3{
         justify-content: center;
     }
     #le_menu{
-        width: 40em;
+        width: 60%;
     }
-    .bulles_menu{
-        
-        &:hover{
-            .validation{ 
-                    border-radius: 0px 25px 25px 0px;
-                    background-color: $couleur_tertiaire;
-                    width: 5em;
-                    height: 5em;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: relative;
-                    bottom:2.5em; left:86.5%; 
-                    animation: slide 1s;
-            }
-        }
-}}
+  }
   /*Coeur avec animation*/
   .coeur_box{
     .coeur_plein{
@@ -646,23 +630,7 @@ h3{
     #le_menu{
         width: 60em;
     }
-    .bulles_menu{
-        
-        &:hover{
-            .validation{ 
-                    border-radius: 0px 25px 25px 0px;
-                    background-color: $couleur_tertiaire;
-                    width: 5em;
-                    height: 5em;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: relative;
-                    bottom:2.5em; left:91%; 
-                    animation: slide 1s;
-            }
-        }
-}}
+   }
   /*Coeur avec animation*/
   .coeur_box{
     .coeur_plein{
@@ -694,49 +662,17 @@ h3{
         justify-content: center;
     }
     #le_menu{
-        width: 90em;
+        width: 60%;
     }
-    .bulles_menu{
-        
-        &:hover{
-            .validation{ 
-                    border-radius: 0px 25px 25px 0px;
-                    background-color: $couleur_tertiaire;
-                    width: 8em;
-                    height: 8em;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: relative;
-                    bottom:5.3em; left:91%; 
-                    animation: slide 1s;
-            }
-        }
-}
+
 .btn_menu{
     width: 30%;
     height: 2.5em;
-    @include typo-footer(2em);
+    @include typo-footer(1em);
     margin-bottom: 5em;
 }
-.titres_des_menus{
-    font-size: 3em;
-}
-.sous_titres_menus{
-     font-size: 2em;
-}
-.prix{
-    @include typo-titres(1.5em);
-}
-.titre_bulle_menu{
-    font-size: 1.5em;
-}
-.texte_bulle_menu{
-    font-size: 1.2em;
-}
-.bulles_menu{
-    height: 6em;
-}
+
+
 }
 @media screen and (min-width : 2500px){
     .div_bulle{
@@ -797,19 +733,6 @@ h3{
         font-size: 0.8em;
         margin-top: 0.8em;
     }*/
-    .bulles_menu:hover{
-        .icon_validation{
-            opacity: 1;
-            font-size: 2.5em;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            transform: rotate(360deg);
-            transition: transform 500ms ease-in-out;
-        }
-    }
     }
     @media screen and (min-width : 2810px){
         header{
